Fixing Navbar links spacing

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -104,21 +104,23 @@ input.form-control.input-group-addon {
 	color: $azuro-black;
 	border-bottom: solid 3px $azuro-black;
 }
-.nav-link.login-link {
+.navbar-toggleable-md .navbar-nav .nav-link.login-link {
+	padding-right: 1rem;
+	padding-left: 1rem;
 	background-color: $azuro-teal;
 	color: $white;
-	margin-left: 1em;
+	margin-left: .75em;
 }
 .azuro-call-icon {
 	align-self: flex-start;
-	padding: 0.25rem 0.75rem;
+	padding: .25rem .75rem;
 	font-size: 1rem;
 	line-height: 1;
 	background: transparent;
 	border: 1px solid transparent;
-	border-radius: 0.25rem;
+	border-radius: .25rem;
 	position: absolute;
-	right: 0.5rem;
+	right: .5rem;
 }
 .fa-lg.fa-va-fix {
 	vertical-align: -50%;
